--- a/style/style.css
+++ b/style/style.css
@@ -5,16 +5,40 @@
 }
 
 
+body{
+    background-image: url("../Imagens/background.jpg");
+}
+
+.keys{
+    display: flex;
+    flex: 1;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
 .key{
     border: 4px solid black;
     border-radius: 5px;
     margin: 1rem;
     font-size: 1.5rem;
     padding: 1rem .5rem;
-    transition: all .08;
+    transition: all .08s;
     width: 100px;
     text-align: center;
     color: white;
     background: rgba(0,0,0,0.4);
     text-shadow: 0 0 5px black;
+}
+
+kbd{
+    display: block;
+    font-size: 4rem;
+    color: ;
+}
+
+.sound{
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
 }
