--- a/style/style.css
+++ b/style/style.css
@@ -6,7 +6,7 @@
 
 
 body{
-    background-image: url("../Imagens/background.jpg");
+    background-image: url("../Imagens/concertImg.webp");
 }
 
 .keys{
@@ -18,7 +18,7 @@ body{
 }
 
 .key{
-    border: 4px solid black;
+    border: 4px solid white;
     border-radius: 5px;
     margin: 1rem;
     font-size: 1.5rem;
